...
                          );
                        },
                      ),
                    ),
                    const SizedBox(height: 18),
                    const Text(
                      "Today's Schedule",
                      style: TextStyle(
                        fontSize: 18,
                        fontWeight: FontWeight.bold,
                        color: Colors.black87,
                      ),
                    ),
...
